--- a/deployment/elk/logstash-nginx.conf
+++ b/deployment/elk/logstash-nginx.conf
@@ -1,15 +1,18 @@
 input {
-    tcp {
-        port => 5000
-        codec => json
+  tcp {
+    port => 5000
+    codec => json_lines {
+      target => "logstash_data"
     }
+  }
 }
+
 
 
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    # index => "backend-logs-%{+YYYY.MM.dd}""
+    index => "backend-logs-%{+YYYY.MM.dd}"
   }
   stdout {
     codec => rubydebug
