--- a/deployment/elk/logstash.yml
+++ b/deployment/elk/logstash.yml
@@ -1,3 +1,5 @@
-http.host: "0.0.0.0"
+api.http.host: "0.0.0.0"
 xpack.monitoring.enabled: true
 xpack.monitoring.elasticsearch.hosts: ["http://elasticsearch:9200"]
+pipeline.buffer.type: heap
+pipeline.ordered: false
