--- a/deployment/backend/requirements.txt
+++ b/deployment/backend/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.115.6
-uvicorn==0.34.0
-utils==1.0.2
-scikit-learn==1.6.0
-pydantic==2.10.4
-numpy==2.2.1
+fastapi==0.95.2
+uvicorn==0.22.0
+numpy==1.24.3
+pandas==1.5.3
+scikit-learn==1.2.2
+pydantic==1.10.2
