--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   elasticsearch:
     image: elasticsearch:8.17.0
@@ -15,41 +13,46 @@ services:
     volumes:
       - ./elk/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - ./els/data:/usr/share/elasticsearch/data
-   
 
   logstash:
-    image: "logstash:8.17.0"
-    container_name: "logstash"
+    image: logstash:8.17.0
+    container_name: logstash
     depends_on:
       - elasticsearch
     ports:
-      - "5000:5000/tcp"
+      - "5000:5000"
       - "9600:9600"
-      - "5044:5044"
     volumes:
       - ./elk/logstash.yml:/usr/share/logstash/config/logstash.yml
-      - ./elk/logstash-nginx.conf:/usr/share/logstash/pipeline/logstash-nginx.config
-    command: logstash -f /usr/share/logstash/pipeline/logstash-nginx.config
+      - ./elk/logstash-nginx.conf:/usr/share/logstash/pipeline/logstash-nginx.conf
 
   kibana:
     image: kibana:8.17.0
     container_name: kibana
-    ports:
-      - "5601:5601"
     depends_on:
       - elasticsearch
+    ports:
+      - "5601:5601"
     volumes:
       - ./elk/kibana.yml:/usr/share/kibana/config/kibana.yml
 
+  backend:
+    build:
+      context: ./backend
+    container_name: backend
+    depends_on:
+      - logstash
+    environment:
+      LOGSTASH_HOST: logstash
+      LOGSTASH_PORT: 5000
+    ports:
+      - "8000:8000"
 
-  # backend:
-  #   build:
-  #     context: ./backend
-  #   container_name: backend
-  #   depends_on:
-  #     - logstash
-  #   environment:
-  #     LOGSTASH_HOST: logstash
-  #     LOGSTASH_PORT: 5000
-  #   ports:
-  #     - "8000:8000"
+  frontend:
+    build:
+      context: ./frontend
+    container_name: frontend
+    depends_on:
+      - backend
+    ports:
+      - "8501:8501"
